--- a/configuration.org
+++ b/configuration.org
@@ -1404,6 +1404,47 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
       :ensure t)
   #+END_SRC
 
+* Shell
+
+  I write quite a bit of bash. [[https://github.com/koalaman/shellcheck][Shellcheck]] says it can help me learn to
+  be better at it. This integrates shellcheck into the flycheck system
+  for shell scripts - in editor shell script linting.
+
+  #+begin_src emacs-lisp
+    ;;; Define a flycheck checker for shellcheck
+    ;;; From: https://github.com/flycheck/flycheck/blob/0f144f13a07e202169acb63880d989cb41787759/doc/developer/developing.rst#writing-more-complex-checkers
+    (flycheck-define-checker sh-shellcheck
+      "A shell script syntax and style checker using Shellcheck.
+
+        See URL `https://github.com/koalaman/shellcheck/'."
+      :command ("shellcheck"
+                "--format" "checkstyle"
+                "--shell" (eval (symbol-name sh-shell))
+                (option-flag "--external-sources"
+                             flycheck-shellcheck-follow-sources)
+                (option "--exclude" flycheck-shellcheck-excluded-warnings list
+                        flycheck-option-comma-separated-list)
+                "-")
+      :standard-input t
+      :modes sh-mode
+      :error-parser flycheck-parse-checkstyle
+      :error-filter (lambda (errors)
+                      (flycheck-remove-error-file-names "-" errors))
+      :predicate (lambda () (memq sh-shell '(bash ksh88 sh)))
+      :verify
+      (lambda (_)
+        (let ((supported (memq sh-shell '(bash ksh88 sh))))
+          (list (flycheck-verification-result-new
+                 :label (format "Shell %s supported" sh-shell)
+                 :message (if supported "yes" "no")
+                 :face (if supports-shell 'success '(bold warning))))))
+      :error-explainer
+      (lambda (err)
+        (let ((error-code (flycheck-error-id err))
+              (url "https://github.com/koalaman/shellcheck/wiki/%S"))
+          (and error-code `(url . ,(format url error-code))))))
+  #+end_src
+
 * Static site/blog generation
 
   I generate my [[https://aaronkuehler.com][personal website]] from a set of org-mode source
